--- a/case-studies/justice-calendar.html
+++ b/case-studies/justice-calendar.html
@@ -29,12 +29,11 @@
         <a href="https://drive.google.com/file/d/1WO8jqoFlAT2EMLnsksBzRlgXXUXFj4xh/view?usp=sharing" target="_blank">Resume</a>
         <a href="about">About Me</a>
       </div>
-
+    </div>
+    <div id="nav-icon-container">
+      <span onclick="openNav()">&#9776;</span>
     </div>
   </div>
-  <!-- <div id="case-study-banner">
-    <img src="../assets/justice-calender-mockup.jpg">
-  </div> -->
   <div id="case-study-body-container">
     <div id="case-study-body" class="justice-calendar">
       <h1>Justice Calendar</h1>
@@ -159,8 +158,6 @@
       </p>
     </div>
   </div>
-
-
 
   <div id="footer">
     Coded with ♥ by <br><br>
