updated linked stylesheet

--- a/case-studies/helpr.html
+++ b/case-studies/helpr.html
@@ -9,7 +9,7 @@
   <title>Anthony Chow • Helpr</title>
 
   <!-- import the webpage's stylesheet -->
-  <link rel="stylesheet" href="../style2.min.css" />
+  <link rel="stylesheet" href="../style.min.css" />
 </head>
 
 <body id="body">
