--- a/case-studies/justice-calendar.html
+++ b/case-studies/justice-calendar.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
 
   <!-- import the webpage's stylesheet -->
-  <link rel="stylesheet" href="../style2.min.css" />
+  <link rel="stylesheet" href="../style.min.css" />
 </head>
 
 <body id="body">
