Fixed navigation issues

--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="style.min.css" />
 </head>
 
-<body>
+<body id="body">
   <nav>
     <div id="nav-container">
       <h1 id="logo-link">Anthony Chow</h1>
