--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div id="nav-container">
       <h1 id="logo-link" onclick="document.getElementById('home-container').scrollIntoView(true)">Anthony Chow</h1>
       <ul id="links">
-        <li id="projects-link">Projects</li>
+        <li onclick="document.getElementById('anchor').scrollIntoView(true)" id="projects-link">Projects</li>
         <li><a href="https://drive.google.com/file/d/1WO8jqoFlAT2EMLnsksBzRlgXXUXFj4xh/view?usp=sharing" target="_blank">Resume</a></li>
         <li id="about-link">About Me</li>
       </ul>
