added reflect gif in jc

--- a/case-studies/justice-calendar.html
+++ b/case-studies/justice-calendar.html
@@ -89,6 +89,16 @@
 
     <div class="hf-body">
       <div class="hf-text">
+        <h4>Take some time to reflect</h4>
+        <p>After viewing content, reflect on the content with guiding questions and log your thoughts in your journal. </p>
+      </div>
+      <div class="hf-img-wide">
+        <img src="../assets/jc-hf-reflect.gif" alt="Reflections" class="dropshadow">
+      </div>
+    </div>
+
+    <div class="hf-body">
+      <div class="hf-text">
         <h4>Discover content & track your progress</h4>
         <p>Justice Calendar will automatically update your scheduled content but you can go beyond that and discover more. Consistent commitment shows up in your stats and all reflection entries can be found in your journal.</p>
       </div>
@@ -168,8 +178,7 @@
       <div class="hf-text">
         <h4>Login & User Setup</h4>
         <p>From our low-fidelity prototype to our high-fidelity prototype, we wanted to ensure that the process of users getting started was <b>streamline and smooth.</b> Part of this process was the specific language used in each screen to provide
-          a
-          sense of guidance and comfort throughout the process. We wanted to ensure that users knew exactly what they're supposed to do and why they're doing it.</p>
+          a sense of <b>guidance and comfort</b> throughout the process. We wanted to ensure that users knew exactly what they're supposed to do and why they're doing it.</p>
       </div>
       <div class="hf-img">
         <img src="../assets/jc-hf1.gif" alt="First-Time Setup" class="dropshadow">
@@ -189,10 +198,20 @@
     <div class="hf-body">
       <div class="hf-text">
         <h4>Calendar View</h4>
-        <p>Users can view the scheduled block of time on a weekly calendar. This would only display the calendar events made from Justice Calendar.</p>
+        <p>Users can view the scheduled <b>block of time</b> on a weekly calendar. This would only display the calendar events made from Justice Calendar.</p>
       </div>
       <div class="hf-img-wide">
         <img src="../assets/jc-hf3.gif" alt="Calendar View" class="dropshadow">
+      </div>
+    </div>
+
+    <div class="hf-body">
+      <div class="hf-text">
+        <h4>Content Reflection</h4>
+        <p>After accessing content, a reflection window will automatically appear to <b>streamline</b> the process between <b>absorbing information and reflecting on it.</b></p>
+      </div>
+      <div class="hf-img-wide">
+        <img src="../assets/jc-hf-reflect.gif" alt="Reflections" class="dropshadow">
       </div>
     </div>
 
@@ -206,10 +225,6 @@
         <img src="../assets/jc-hf4.gif" alt="Dashboard & More" class="dropshadow">
       </div>
     </div>
-
-
-
-
 
     <h4>User Testing</h4>
     <p>
