fixed image alts on home page

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   </header>
 
   <div class="downArrow bounce" id="anchor">
-    <a href="#anchor"><img src="assets/downArrow.svg" alt=blob style="filter: invert(.75)"/></a>
+    <a href="#anchor"><img src="assets/downArrow.svg" alt="Down Arrow" style="filter: invert(.75)"/></a>
   </div>
 
   <main id="content">
@@ -79,7 +79,7 @@
           </button>
         </div>
         <div class="case-study-img">
-          <img class="product-img" src="assets/justice-calender-mockup.jpg" alt=blob />
+          <img class="product-img" src="assets/justice-calender-mockup.jpg" alt="Justice Calendar" />
         </div>
       </div>
       <div class="case-study" data-aos="fade-up">
@@ -93,7 +93,7 @@
         </div>
 
         <div class="case-study-img">
-          <img src="assets/helpr-mockup.jpg" alt=blob />
+          <img src="assets/helpr-mockup.jpg" alt="Helpr" />
         </div>
       </div>
 
@@ -114,7 +114,7 @@
           </button>
         </div>
         <div class="case-study-img">
-          <img class="product-img" src="assets/tutorqueue-mockup.jpg" alt=blob />
+          <img class="product-img" src="assets/tutorqueue-mockup.jpg" alt="TutorQueue" />
         </div>
       </div>
     </div>
