Updated CSS on DES 157 Portal Page

--- a/DES157/index.html
+++ b/DES157/index.html
@@ -1,12 +1,100 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portal Page Home</title>
-  </head>
-  <body>
-    <h1>This is my portal page</h1>
-    <p>It is so awesome</p>
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Anonymous+Pro:wght@400;700&family=Montserrat:wght@500;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="styles.css">
+
+  <title>Anthony Chow • Portal Page</title>
+</head>
+
+<body>
+  <nav>
+    <ul>
+      <li><a href="#">Email</a></li>
+      <li><a href="#">HTML5</a></li>
+      <li><a href="#">Valid HTML</a></li>
+    </ul>
+  </nav>
+  <header>
+    <div class="banner-text">
+      <h1>Anthony<b>Chow</b></h1>
+      <h2>DES 157 - Interactive Media II - Winter 2021</h2>
+    </div>
+    <div class="banner-image">
+      <img src="assets/me.jpg" alt="portrait image">
+    </div>
+  </header>
+  <div class="arrow">
+    <a href="#main">↓</a>
+  </div>
+  <main id="main">
+    <section>
+      <ul>
+        <li>Final Project
+          <ul>
+            <li><a href="#">Final Project</a></li>
+          </ul>
+        </li>
+        <li>Studios
+          <ul>
+            <li><a href="#">Learning Journal</a></li>
+            <li><a href="#">Mad Libs 2.0</a></li>
+            <li><a href="#">Every Picture</a></li>
+            <li><a href="#">Game On!</a></li>
+          </ul>
+        </li>
+        <li> Experiments
+          <ul>
+            <li>
+              <a href="#">Exp 1</a>
+            </li>
+          </ul>
+        </li>
+      </ul>
+    </section>
+    <section>
+      <ul>
+        <li>Research
+          <ul>
+            <li><a href="#">Annotated Bibliography</a></li>
+            <li><a href="#">Comparative Analysis</a></li>
+            <li><a href="#">Interview Subject</a></li>
+            <li><a href="#">Interview Questions</a></li>
+            <li><a href="#">Transcription / Reflection</a></li>
+            <li><a href="#">Visual Research</a></li>
+          </ul>
+        </li>
+      </ul>
+    </section>
+    <section>
+      <ul>
+        <li>Development
+          <ul>
+            <li><a href="#">Brainstorm</a></li>
+            <li><a href="#">Storyboard</a></li>
+            <li><a href="#">Wireframe Sketch</a></li>
+            <li><a href="#">Comps</a></li>
+            <li><a href="#">Prototype 1</a></li>
+            <li><a href="#">Prototype 2</a></li>
+            <li><a href="#">Audience Testing</a></li>
+            <li><a href="#">Presentation</a></li>
+          </ul>
+        </li>
+      </ul>
+    </section>
+  </main>
+  <footer>
+    <ul>
+      <li><a href="#">Email</a></li>
+      <li><a href="#">HTML5</a></li>
+      <li><a href="#">Valid HTML</a></li>
+    </ul>
+  </footer>
+</body>
+
 </html>
