DES 157 extra adjustments

--- a/DES157/index.html
+++ b/DES157/index.html
@@ -15,9 +15,9 @@
 <body>
   <nav>
     <ul>
-      <li><a href="#">Email</a></li>
-      <li><a href="#">HTML5</a></li>
-      <li><a href="#">Valid HTML</a></li>
+      <li><a href="mailto:&#097;&#110;&#116;&#099;&#104;&#111;&#119;&#064;&#117;&#099;&#100;&#097;&#118;&#105;&#115;&#046;&#101;&#100;&#117;">Email</a></li>
+      <li><a href="https://validator.w3.org/check?uri=referer">Valid HTML 5</a></li>
+      <li><a href="https://jigsaw.w3.org/css-validator/check/referer">Valid CSS</a></li>
     </ul>
   </nav>
   <header>
@@ -90,9 +90,9 @@
   </main>
   <footer>
     <ul>
-      <li><a href="#">Email</a></li>
-      <li><a href="#">HTML5</a></li>
-      <li><a href="#">Valid HTML</a></li>
+      <li><a href="mailto:&#097;&#110;&#116;&#099;&#104;&#111;&#119;&#064;&#117;&#099;&#100;&#097;&#118;&#105;&#115;&#046;&#101;&#100;&#117;">Email</a></li>
+      <li><a href="https://validator.w3.org/check?uri=referer">Valid HTML 5</a></li>
+      <li><a href="https://jigsaw.w3.org/css-validator/check/referer">Valid CSS</a></li>
     </ul>
   </footer>
 </body>
