DES 157 added exp:dom file

--- a/DES157/index.html
+++ b/DES157/index.html
@@ -51,7 +51,7 @@
         <li> Experiments
           <ul>
             <li>
-              <a href="#">Exp 1</a>
+              <a href="exp-dom.html">Exp: DOM</a>
             </li>
           </ul>
         </li>
