--- a/DES157/index.html
+++ b/DES157/index.html
@@ -42,7 +42,7 @@
         </li>
         <li>Studios
           <ul>
-            <li><a href="#">Learning Journal</a></li>
+            <li><a href="lj">Learning Journal</a></li>
             <li><a href="#">Mad Libs 2.0</a></li>
             <li><a href="#">Every Picture</a></li>
             <li><a href="#">Game On!</a></li>
