--- a/DES157/index.html
+++ b/DES157/index.html
@@ -14,6 +14,7 @@
 
 <body>
   <nav>
+    <img src="assets/logo-white.svg" alt="logo">
     <ul>
       <li><a href="mailto:&#097;&#110;&#116;&#099;&#104;&#111;&#119;&#064;&#117;&#099;&#100;&#097;&#118;&#105;&#115;&#046;&#101;&#100;&#117;">Email</a></li>
       <li><a href="https://validator.w3.org/check?uri=referer">Valid HTML 5</a></li>
