--- a/DES157/index.html
+++ b/DES157/index.html
@@ -44,7 +44,7 @@
         <li>Studios
           <ul>
             <li><a href="lj">Learning Journal</a></li>
-            <li><a href="#">Mad Libs 2.0</a></li>
+            <li><a href="madlibs">Mad Libs 2.0</a></li>
             <li><a href="#">Every Picture</a></li>
             <li><a href="#">Game On!</a></li>
           </ul>
