fixed image path

--- a/DES157/lj/index.html
+++ b/DES157/lj/index.html
@@ -37,7 +37,7 @@
         there are different ways for me to group them and I thought grouping them by genus would be interesting to see since I have plants of many genus. I believe this collection would shed light on how I see beauty in plants, especially in urban
         spaces. I wanted to feature beautiful images of all my plants to communicate how I see my plants in my space.</p>
       <figure>
-        <img src="../assets/boba.jpg" alt="boba">
+        <img src="../assets/boba.JPG" alt="boba">
         <figcaption>Emma Choi, 2021</figcaption>
       </figure>
       <p>This image my partner provided shows a tea drink from RareTea, a boba shop in Davis. This particular kind of drink is not a milk tea since it does not have any milk in it, but it is more like an iced sweet tea. Although there isn't too much
