fixed png issue

--- a/DES157/UNOish/index.html
+++ b/DES157/UNOish/index.html
@@ -13,7 +13,7 @@
 
 <body>
   <header>
-    <img src="images/logo.png" alt="UNO-ish logo">
+    <img src="images/logo.PNG" alt="UNO-ish logo">
   </header>
   <main>
     <section id="game-start">
