--- a/DES157/index.html
+++ b/DES157/index.html
@@ -36,11 +36,6 @@
   <main id="main">
     <section>
       <ul>
-        <li>Final Project
-          <ul>
-            <li><a href="#">Final Project</a></li>
-          </ul>
-        </li>
         <li>Studios
           <ul>
             <li><a href="lj">Learning Journal</a></li>
@@ -60,30 +55,18 @@
     </section>
     <section>
       <ul>
-        <li>Research
+        <li>Research & Development
           <ul>
-            <li><a href="#">Annotated Bibliography</a></li>
-            <li><a href="#">Comparative Analysis</a></li>
-            <li><a href="#">Interview Subject</a></li>
-            <li><a href="#">Interview Questions</a></li>
-            <li><a href="#">Transcription / Reflection</a></li>
-            <li><a href="#">Visual Research</a></li>
+            <li><a href="#">Project Brief</a></li>
           </ul>
         </li>
       </ul>
     </section>
     <section>
       <ul>
-        <li>Development
+        <li>Final
           <ul>
-            <li><a href="#">Brainstorm</a></li>
-            <li><a href="#">Storyboard</a></li>
-            <li><a href="#">Wireframe Sketch</a></li>
-            <li><a href="#">Comps</a></li>
-            <li><a href="#">Prototype 1</a></li>
-            <li><a href="#">Prototype 2</a></li>
-            <li><a href="#">Audience Testing</a></li>
-            <li><a href="#">Presentation</a></li>
+            <li><a href="#">Final Project</a></li>
           </ul>
         </li>
       </ul>
