added one sentence brief in beginning of project brief

--- a/DES157/final/brief.html
+++ b/DES157/final/brief.html
@@ -17,10 +17,11 @@
 <body>
   <main>
     <h1>Final Project Brief</h1>
+    <p>For my final project, I want to create an interactive and animated quiz that tells you which kind of plant you are based on characteristics of your personality.</p>
     <h2>Comparison Project 1: <span>10 Misconceptions on UX Quiz</span></h2>
     <section>
       <div class="text">
-        <p>For my final project, I wanted to work on a different take of the <a href="../studio2">Every Picture</a> assignment where I simply displayed my houseplants with a hover and click interaction. In this remake, I wanted to take a totally
+        <p>I wanted to work on a different take of the <a href="../studio2">Every Picture</a> assignment where I simply displayed my houseplants with a hover and click interaction. In this remake, I wanted to take a totally
           different approach to utilizing my plant photos and instead creating a fun plant-themed quiz that pairs the user with a plant that is most similar to them based on some characteristics.</p>
         <p>With that said, I did some research on <a href="https://www.awwwards.com" target="_blank">Awwwards</a> to look at examples of quizzes. This <a href="https://10ideesrecuesenuxdesign.castoretpollux.com/en/">project</a> has many interesting
           interactions and animations that I think would be fun trying to replicate or draw inspiration from.</p>
