updated home page to link to brief

--- a/DES157/index.html
+++ b/DES157/index.html
@@ -57,7 +57,7 @@
       <ul>
         <li>Research & Development
           <ul>
-            <li><a href="#">Project Brief</a></li>
+            <li><a href="final/brief.html">Project Brief</a></li>
           </ul>
         </li>
       </ul>
