footer and header change

--- a/DES157/final/brief.html
+++ b/DES157/final/brief.html
@@ -73,6 +73,13 @@
         <p class="long">My intended audience is practically anybody who is curious about themselves and about plants. They don't necessarily need to have prior knowledge of plants since all the explanations in the end will be very simplified and easy to understand even to beginners. I guess the only knowledge you would need to know about plants is that they need sunlight and water. I hope the takeaway from this is that people get some interesting new knowledge about plants or about themselves in relation to plants. </p>
     </section>
   </main>
+  <footer>
+    <ul>
+      <li><a href="mailto:&#097;&#110;&#116;&#099;&#104;&#111;&#119;&#064;&#117;&#099;&#100;&#097;&#118;&#105;&#115;&#046;&#101;&#100;&#117;">Email</a></li>
+      <li><a href="https://validator.w3.org/check?uri=referer">Valid HTML 5</a></li>
+      <li><a href="https://jigsaw.w3.org/css-validator/check/referer">Valid CSS</a></li>
+    </ul>
+  </footer>
 </body>
 
 </html>
