--- a/DES157/index.html
+++ b/DES157/index.html
@@ -58,7 +58,7 @@
         <li>Research & Development
           <ul>
             <li><a href="final/brief.html">Project Brief</a></li>
-            <li> <a href="final/comp.png">Digital Comp</a></li>
+            <li> <a href="final/images/comp.png">Digital Comp</a></li>
           </ul>
         </li>
       </ul>
