added prototype 1 to home page

--- a/DES157/index.html
+++ b/DES157/index.html
@@ -60,6 +60,7 @@
             <li><a href="final/brief.html">Project Brief</a></li>
             <li><a href="final/images/comp.png">Digital Comp</a></li>
             <li><a href="final/images/comp2.png">Revised Digital Comp</a></li>
+            <li><a href="final/proto">Prototype 1</a></li>
           </ul>
         </li>
       </ul>
