--- a/DES157/index.html
+++ b/DES157/index.html
@@ -61,6 +61,7 @@
             <li><a href="final/images/comp.png">Digital Comp</a></li>
             <li><a href="final/images/comp2.png">Revised Digital Comp</a></li>
             <li><a href="final/proto">Prototype 1</a></li>
+            <li><a href="final/usertest">Refined Comp</a></li>
           </ul>
         </li>
       </ul>
