link user test results page

--- a/DES157/index.html
+++ b/DES157/index.html
@@ -62,6 +62,7 @@
             <li><a href="final/images/comp2.png">Revised Digital Comp</a></li>
             <li><a href="final/proto">Prototype 1</a></li>
             <li><a href="final/usertest">Refined Comp</a></li>
+            <li><a href="final/usertest-results.html">User Test Results</a></li>
           </ul>
         </li>
       </ul>
