--- a/DES157/final/usertest-results.html
+++ b/DES157/final/usertest-results.html
@@ -8,6 +8,10 @@
   <link href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap" rel="stylesheet">
 
   <style>
+    * {
+      box-sizing: border-box;
+      overflow-x: hidden;
+    }
     body {
       background-color: #213F2B;
       color: #EEEED7;
